--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^8.0.0",
     "sqlite3": "^5.1.7"
   }
 }
